--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 ndarray = "0.15.0"
 rand = "0.8.4"
-tqdm-rs = "0.1.0"
+indicatif = {version = "*", features = ["rayon"]}
