--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 ndarray = "0.15.0"
 rand = "0.8.4"
 indicatif = {version = "*", features = ["rayon"]}
+serde = {version = "1.0.116", features = ["derive"]}
+bincode = "1.3.1"
 
 [[bin]]
 name = "main"
