--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rand = "0.8.4"
 indicatif = {version = "*", features = ["rayon"]}
 serde = {version = "1.0.116", features = ["derive"]}
 bincode = "1.3.1"
+clap = "3.0.0-rc.3"
 
 [[bin]]
 name = "main"
